# MinQEngine

./: .gitignore  BuildProject.bat  CMakeLists.txt  PrepareBuild.bat  README.md
CMake/: GlobalConfigure.cmake  MinQConfigure.cmake  MinQDefines.cmake  PreConfigure.cmake
MinQEngine/: CMakeLists.txt
MinQEngine/Source/: CMakeLists.txt  MinQDefines.h
MinQEngine/Source/Configuration/: BuildConfig.h
MinQEngine/Source/Core/: Application.cpp  Application.h  EntryPoint.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  Window.cpp  Window.h
MinQEngine/Source/Events/: EventCommon.h  EventManager.cpp  EventManager.h  EventMessage.h
MinQEngine/Source/Imgui/: ImguiGlfwBackend.cpp  ImguiLayer.cpp  ImguiLayer.h  ImguiVulkanBackend.cpp
MinQEngine/Source/Input/: Clock.cpp  Clock.h
MinQEngine/Source/Logger/: Assert.h  Log.cpp  Log.h
MinQEngine/Source/Memory/: DynamicMemoryAllocator.cpp  DynamicMemoryAllocator.h  MemoryAllocator.h  MemoryDefines.h  MemoryManager.cpp  MemoryManager.h  MemoryTags.h  MinQMemory.h  TLSF.c
MinQEngine/Source/Platform/: Platform.h
MinQEngine/Source/Platform/Windows/: WindowsPlatformUtility.cpp  WindowsUtility.cpp  WindowsWindow.cpp  WindowsWindow.h
MinQEngine/Source/RenderSystems/: RenderSystem.cpp  RenderSystem.h
MinQEngine/Source/RenderSystems/vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDefines.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderSystem.cpp  VulkanRenderSystem.h  VulkanSwapChain.cpp  VulkanSwapChain.h
MinQEngine/Source/Utilities/: BitOperationUtility.h  ByteBuffer.cpp  ByteBuffer.h  OOUtility.h
MinQEngine/Source/Utilities/Containers/: DynamicArray.cpp  DynamicArray.h  darray.h
Testbed/: CMakeLists.txt
Testbed/Source/: TestbedApp.cpp
